# async-openpix-sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt
openpix/: __init__.py
openpix/api/: __init__.py  account.py  api.py  application.py  cashback.py  charge.py  customer.py  dispute.py  partner.py  payment.py  pix_qr_code.py  receipt.py  refund.py  sub_account.py  subscription.py  transactions.py  transfer.py  webhook.py
openpix/http/: __init__.py  abstract_http_client.py  async_bytes_reader.py  async_http_client.py
openpix/models/: __init__.py  account.py  application.py  balance.py  base_model.py  cashback.py  charge.py  customer.py  dispute.py  page_info.py  partner.py  payment.py  payment_methods.py  pix_qr_code.py  refund.py  sub_account.py  subscription.py  tax_id.py  transactions.py  webhook.py
openpix/schemas/: __init__.py  account.py  application.py  base_schema.py  cashback.py  charge.py  customer.py  discount_settings.py  fines.py  interests.py  partner.py  payment.py  pix_qr_code.py  refund.py  split.py  sub_account.py  subscription.py  tax_id.py  transfer.py  webhook.py
openpix/sdk/: __init__.py  base_sdk.py  openpix_sdk.py
openpix/utils/: __init__.py  application.py  async_bytes_reader.py  basis_points.py  charge.py  frequency.py  pix.py  serializer.py  status.py  tax.py  validators.py  webhook.py
tests/: http_client.py  schemas.py
