[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openpix"
version = "0.1.0"
authors = [
    {name = "Fabio Antonio Astore", email = "astore.a.fabio@gmail.com"}
]
description = "Async OpenPix SDK"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "httpx==0.28.1",
    "ijson==3.4.0",
    "pydantic==2.11.5"
]
requires-python = ">=3.13.3"

[tool.setuptools]
packages = ["openpix"]